dim/spec/test_input/invalid_input/files_key_invalid_string.dim
Config:
  - originator: CompanyName
    files:
    category: module
